Got rid of the underline in the links

--- a/plot-ecg/index.html
+++ b/plot-ecg/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>ECG</title>
+    <title>Attys ECG plotter</title>
     <link rel="stylesheet" href="dygraph.css" />
     <link rel="stylesheet" href="plotecg.css" />
     <script src="dygraph.js"></script>
@@ -41,6 +41,9 @@
   </div>
   <div id="message"> </div>
 </div>
+
+<br />
+<a href="http://www.attys.tech">ATTYS data acquisition</a>
     
   </body>
 </html>
